--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="<pk_test_key>"
 CLERK_SECRET_KEY="<sk_test_key>"
 GROQ_API_KEY="<api_key>"
+MODEL_ID="<llm_model_id>"
