--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.5",
     "groq": "^3.53.0",
     "groq-sdk": "^0.5.0",
     "lucide-react": "^0.426.0",
